/*
 *              Copyright (c) 2016-2019, Nuralogix Corp.
 *                      All Rights reserved
 *
 *      THIS SOFTWARE IS LICENSED BY AND IS THE CONFIDENTIAL AND
 *      PROPRIETARY PROPERTY OF NURALOGIX CORP. IT IS
 *      PROTECTED UNDER THE COPYRIGHT LAWS OF THE USA, CANADA
 *      AND OTHER FOREIGN COUNTRIES. THIS SOFTWARE OR ANY
 *      PART THEREOF, SHALL NOT, WITHOUT THE PRIOR WRITTEN CONSENT
 *      OF NURALOGIX CORP, BE USED, COPIED, DISCLOSED,
 *      DECOMPILED, DISASSEMBLED, MODIFIED OR OTHERWISE TRANSFERRED
 *      EXCEPT IN ACCORDANCE WITH THE TERMS AND CONDITIONS OF A
 *      NURALOGIX CORP SOFTWARE LICENSE AGREEMENT.
 */
 syntax = "proto3";

 option cc_enable_arenas = true;
 option java_package = "ai.nuralogix.dfx";
 option java_outer_classname = "Auths";
 
 package dfx.proto.auths;
 
 service Services {
   rpc SendReset            (SendResetRequest)            returns (SendResetResponse)            {}
   rpc SendResetMobile      (SendResetMobileRequest)      returns (SendResetMobileResponse)             {}
   rpc RequestLoginCodeV2   (RequestLoginCodeV2Request)   returns (RequestLoginCodeV2Response)             {}
   rpc RenewToken           (RenewTokenRequest)           returns (RenewTokenResponse)             {}
 }

 message SendResetRequest {
     string Email = 1;
     string Identifier = 2;
 }
 message SendResetResponse {
     bool success = 1;
 }

 message SendResetMobileRequest {
    string Email = 1;
    string PhoneNumber = 2;
 }
 message SendResetMobileResponse {
     bool success = 1;
 }

 message RequestLoginCodeV2Request {
    string Identifier = 1;
    string PhoneNumber = 2;
 }
 message RequestLoginCodeV2Response {
     bool success = 1;
 }

 message RenewTokenRequest {
    string Token = 1;
    string RefreshToken = 2;
 }
 message RenewTokenResponse {
    string Token = 1;
    string RefreshToken = 2;
 }
 